Fix path in action

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         repository: MALSync/MALSync
         ref: 'master'
-        path: data\MALSync
+        path: data/MALSync
     - name: Set up Python 3.12
       uses: actions/setup-python@v5
       with:
