--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -3,6 +3,9 @@ name: Update
 on:
   schedule:
     - cron: '00 12 14 * *'
+  push:
+    paths:
+      = 'custom.json'
   workflow_dispatch: {}
 
 jobs:
